fixed navbar colors and flex wrap column spacing

--- a/styles/components/ServerList.module.scss
+++ b/styles/components/ServerList.module.scss
@@ -121,21 +121,21 @@
   @media (min-width: 765px) {
     .server_list_container { position: relative; display: flex; flex-wrap: wrap; height: 100%; width: 100%; }
     .server_list_body_container { height: 100%; flex: 1 1 60%; min-width: 45ch; overflow-y: auto; overflow-x: hidden; background-color: $dark; }
-    .server_list_body { width: 100%; height: calc(100% - 35px) !important; background-color: $medium; }
+    .server_list_body { width: 100%; height: calc(100% - 55px - 35px) !important; background-color: $medium; }
   }
   @media (max-width: 765px) {
     .server_list_container { position: relative; display: flex; flex-wrap: wrap; max-height: 100%; height: 100%; width: 100%; }
     .server_list_body_container { height: 100%; flex: 1 1 60%; min-width: 45ch; overflow-y: auto; overflow-x: hidden; padding-bottom: 100px; background-color: $dark; }
-    .server_list_body { width: 100%; height: calc(100% - 30px - 35px) !important; overflow-y: scroll; background-color: $medium; z-index: 2;   }
+    .server_list_body { width: 100%; height: calc(100% - 35px - 35px) !important; overflow-y: scroll; background-color: $medium; z-index: 2;   }
   }
   @media (max-width: 525px) {
-    .server_list_body { width: 100%; height: calc(100% - 70px - 35px) !important; overflow-y: scroll; background-color: $medium; z-index: 2;   }
+    .server_list_body { width: 100%; height: calc(100% - 75px - 35px) !important; overflow-y: scroll; background-color: $medium; z-index: 2;   }
   }
   @media (max-width: 500px) {
-    .server_list_body { width: 100%; height: calc(100% - 60px - 35px) !important; overflow-y: scroll; background-color: $medium; z-index: 2;   }
+    .server_list_body { width: 100%; height: calc(100% - 65px - 35px) !important; overflow-y: scroll; background-color: $medium; z-index: 2;   }
   }
   @media (max-width: 475px) {
-    .server_list_body { width: 100%; height: calc(100% - 50px - 35px) !important; overflow-y: scroll; background-color: $medium; z-index: 2;  }
+    .server_list_body { width: 100%; height: calc(100% - 55px - 35px) !important; overflow-y: scroll; background-color: $medium; z-index: 2;  }
   }
 
     @media (min-width: 765px) {
