--- a/styles/layout/Navbar.module.scss
+++ b/styles/layout/Navbar.module.scss
@@ -57,7 +57,7 @@
             .tab_button:first-of-type { border-left: 2px solid $tertiary }
 
             @media (min-width: 765px) {
-                .tab_button:hover { background-color: $tertiary !important; color: $primary !important; border-right: 2px solid $primary; border-bottom: 2px solid $primary; }
+                .tab_button:hover { background-color: $tertiary !important; color: $light !important; border-right: 2px solid $primary; border-bottom: 2px solid $primary; }
                 .tab_button:hover:first-of-type { border-left: 2px solid $primary }
             }
 
@@ -68,8 +68,8 @@
                 padding: 0px 10px;
                 font-size: 24px;
                 font-weight: bold;
-                color: $primary;
-                background-color: $tertiary;
+                color: $light !important;
+                background-color: $tertiary !important;
                 border-bottom-left-radius: 5px;
                 border-bottom-right-radius: 5px;
                 border-right: 2px solid $primary;
